# ocamlbuild

./: .depend  .gitattributes  .gitignore  .merlin  .travis.yml  CONTRIBUTING.adoc  Changes  GNUmakefile.am  META  META.in  Makefile  Makefile.create_config  Readme.md  VERSION  configure.ac  configure.make  install-rev-deps.sh  ocamlbuild.install  ocamlbuild.opam  opam
.github/workflows/: build.yml  rev-deps.yaml
bootstrap/: Makefile  _tags  bootstrap.itarget  ocamlbuild_pack.mlpack  ocamlbuildlib.mllib
examples/: Makefile
examples/01-simple/: Makefile
examples/02-subdirs/: Makefile
examples/03-packages/: Makefile
examples/04-library/: Makefile
examples/05-lex-yacc/: Makefile
examples/06-ocamldoc/: Makefile
examples/07-dependent-projects/: .gitignore  Makefile
howto/: release.adoc
man/: jbuild  ocamlbuild.1
manual/: CONTRIBUTING.adoc  LICENSE  README.adoc  README.md  manual.adoc  manual.md  manual.text
manual/examples/: Makefile
plugin-lib/: ocamlbuild_executor.ml  ocamlbuild_unix_plugin.ml
src/: command.ml  command.mli  display.ml  findlib.ml  flags.ml  flags.mli  hooks.ml  jbuild  lexers.mli  lexers.mll  log.ml  main.ml  my_std.ml  my_std.mli  my_unix.ml  my_unix.mli  ocaml_compiler.ml  ocaml_dependencies.ml  ocaml_specific.ml  ocaml_utils.ml  ocamlbuild_config.ml.in  ocamlbuild_executor.ml  ocamlbuild_plugin.ml  ocamlbuild_where.ml  options.ml  options.mli  param_tags.ml  param_tags.mli  pathname.ml  plugin.ml  resource.ml  rule.ml  shell.ml  signatures.mli  slurp.ml  solver.ml
test/: runtest.sh
test/test11/: test.sh
test/test2/: _tags  test.sh
test/test3/: test.sh
test/test4/: test.sh
test/test5/: test.sh
test/test6/: test.sh
test/test7/: test.sh
testsuite/: README  external.ml  external_test_header.ml  findlibonly.ml  findlibonly_test_header.ml  internal.ml  internal_test_header.ml  jbuild  ocamlbuild_test.ml
(+21 files in other folders)
